<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="@dimen/_12sdp">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_100sdp"
        android:padding="@dimen/_12sdp">

        <TextView
            android:id="@+id/tv_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_insert"
            android:textSize="@dimen/_18ssp"
            android:layout_gravity="center_horizontal"

            android:layout_marginBottom="@dimen/_14sdp"/>

        <EditText
            android:id="@+id/nm_barang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_nama_barang" />

        <EditText
            android:id="@+id/jml_barang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_jumlah_barang" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/btn_reset"
            android:textAllCaps="false"
            android:backgroundTint="#F64B4B"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/btn_save"
            android:textAllCaps="false"
            android:backgroundTint="#78FA48"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn1"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_show"
            android:layout_width="@dimen/_155sdp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/btn_show"
            android:textAllCaps="false"
            android:backgroundTint="#EFC750"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/btn_logout"
            android:textAllCaps="false"
            android:backgroundTint="#535252"/>

    </LinearLayout>

</RelativeLayout>